[package]
name = "wustc"
description = "Exampwe of ewwonyenyonyuns code:"
documentation = "https://rawcdn.githack.com/nabijaczleweli/wustc/doc/wustc/index.html"
repository = "https://github.com/nabijaczleweli/wustc"
homepage = "https://twitter.com/plaidfinch/status/1176637387511934976"
readme = "README.md"
keywords = ["owo", "uwu", "rustc"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in man/*.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]
